changed the first image

--- a/style.css
+++ b/style.css
@@ -10,4 +10,10 @@ font-size: 48px;
 	height:50%;
 	width: auto;
 	margin: auto;
-}
+
+
+#metal frame{
+}            
+        Height:50%
+        Width: auto;
+        margin: auto;
