--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-size: 48px;
 }
 #frame{
 	height:50%;
-<<<<<<< HEAD
+< HEAD
 	width: auto;
 	margin: auto;
 
@@ -18,7 +18,6 @@ font-size: 48px;
         Height:50%
         Width: auto;
         margin: auto;
-=======
 	width: 50%;
 	margin: 50%;
 }
